UHM-6266, update French translation file

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,76 +1,76 @@
 labtrackingapp.title=Suivi de la pathologie
-labtrackingapp.addorderpagetitle=Order a new test
+labtrackingapp.addorderpagetitle=Demander un nouveau test
 labtrackingapp.editOrderPageTitle=Edit existing order
-labtrackingapp.savingtitle=Saving Test Order
+labtrackingapp.savingtitle=Enregistrer la demande
 labtrackingapp.loadingtitle=Loading Test Order
-labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
+labtrackingapp.prelabdiagnosislabel=Diagnostic pre-operatoire
 labtrackingapp.proceduresitelabel=Procedure
-labtrackingapp.procedureNonCoded = Procedure Non-Coded
-labtrackingapp.caresettinglabel= Care Setting
-labtrackingapp.instructionslabel=Instructions
-labtrackingapp.clinicalhistorylabel=Clinical History
-labtrackingapp.pathologyspecimendetailslabel=Specimen Processing Details
-labtrackingapp.resultdetailslabel=Result details
-labtrackingapp.orderdetails.title=Lab Test details
-labtrackingapp.orderdetails.label=Order details
-labtrackingapp.orderdetails.residentlabel=Résidant
-labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
-labtrackingapp.orderdetails.phoneNumberForClinician=Phone number for clinician
-labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
-labtrackingapp.orderdetails.processedDatelabel=Date Processed
-labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
-labtrackingapp.orderdetails.locationlabel=Location where procedure performed
-labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
-labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
-labtrackingapp.orderdetails.additionalinformationlabel=Information supplémentaire
-labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
-labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
+labtrackingapp.procedureNonCoded=Procedure non-codee
+labtrackingapp.caresettinglabel=Parametre de soins
+labtrackingapp.instructionslabel=Instruction
+labtrackingapp.clinicalhistorylabel=Histoire clinique
+labtrackingapp.pathologyspecimendetailslabel=Information sur le specimen
+labtrackingapp.resultdetailslabel=Resultat
+labtrackingapp.orderdetails.title=Information sur le test
+labtrackingapp.orderdetails.label=Information sur la demande
+labtrackingapp.orderdetails.residentlabel=Resident - etiquette
+labtrackingapp.orderdetails.mdtonotifylabel=MD - etiquette
+labtrackingapp.orderdetails.phoneNumberForClinician=Clinicien - Telephone
+labtrackingapp.orderdetails.sampledatelabel=Date de reception du specimen
+labtrackingapp.orderdetails.processedDatelabel=Date de realisation du test
+labtrackingapp.orderdetails.dateOfInitialConsult=Date initiale de consultation
+labtrackingapp.orderdetails.locationlabel=Lieu de realisation de la procedure
+labtrackingapp.orderdetails.attendingsurgeonlabel=En attente de chirurgie
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Diagnostic pre-operatoire
+labtrackingapp.orderdetails.postopdiagnosislabel=Diagnostic post-operatoire
+labtrackingapp.orderdetails.additionalinformationlabel=Information supplementaires
+labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
+labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry Needed
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry Sent to Boston
-labtrackingapp.orderdetails.specimandetailslabel=Speciman details
-labtrackingapp.orderdetails.resultsdatelabel=Results Date
-labtrackingapp.orderdetails.noteslabel=Notes
-labtrackingapp.orderdetails.uploadfilelabel=Results File
-labtrackingapp.listpage.panelheading=Test Orders
-labtrackingapp.listpage.pleasewait=Updating, please wait
-labtrackingapp.listpage.patient=ID patient
+labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
+labtrackingapp.orderdetails.resultsdatelabel=Date de resultat
+labtrackingapp.orderdetails.noteslabel=Remarques
+labtrackingapp.orderdetails.uploadfilelabel=Telecharger le resultat
+labtrackingapp.listpage.panelheading=Demander un test
+labtrackingapp.listpage.pleasewait=Mise a jour / attendre
+labtrackingapp.listpage.patient=Identification du patient
 labtrackingapp.listpage.name=Nom
-labtrackingapp.listpage.status=État
-labtrackingapp.listpage.requestdate=Request Date
-labtrackingapp.listpage.sampledate=Sample Date
-labtrackingapp.listpage.processingDate=Processing Date
-labtrackingapp.listpage.resultdate=Result Date
+labtrackingapp.listpage.status=Statut
+labtrackingapp.listpage.requestdate=Date de la demande
+labtrackingapp.listpage.sampledate=Date de reception du speciemen
+labtrackingapp.listpage.processingDate=Date de realisation du test
+labtrackingapp.listpage.resultdate=Date du resultat
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
 labtrackingapp.listpage.to=à
 labtrackingapp.listpage.from=de
 labtrackingapp.listpage.enter=enter
-labtrackingapp.listpage.search=Recherche pour le patient
-labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
-labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
-labtrackingapp.app.label=Suivi de la pathologie
-labtrackingapp.labSummary=Pathology Summary
-labtrackingapp.order.label=Order Lab
+labtrackingapp.listpage.search=Rechercher un patient
+labtrackingapp.listpage.ordercancelreasonprompt=Etes-vous sur de vouloir annuler le test?
+labtrackingapp.listpage.orderpurgereasonprompt=Etes-vous sur de vouloir retirer le test?
+labtrackingapp.app.label=Pathologie - Suivi
+labtrackingapp.labSummary=Pathologie - Resume
+labtrackingapp.order.label=Demander un test
 labtrackingapp.orderPathology.label=Ordre de pathologie
-labtrackingapp.orderNumberLabel=Order #
-labtrackingapp.returnToListPage=Retour à la liste
-labtrackingapp.cancelOrder=Cancel Test Order
-labtrackingapp.proceduresSelected=Selected
+labtrackingapp.orderNumberLabel=Numero de demande
+labtrackingapp.returnToListPage=Retour a la page de liste
+labtrackingapp.cancelOrder=Annuler un test demande
+labtrackingapp.proceduresSelected=Selectioner
 labtrackingapp.proceduresAvailable=Disponibles
 labtrackingapp.loading=Chargement en cours...
-labtrackingapp.purge=Purge
-labtrackingapp.replacePDF=Replace PDF
-labtrackingapp.addPDF=Add PDF
-labtrackingapp.removePDF=Remove PDF
-labtrackingapp.downloadPDF=Download PDF
-labtrackingapp.pathology=Pathology
-labtrackingapp.noResults=No result
-labtrackingapp.notTaken=Not taken
-labtrackingapp.taken=taken
-labtrackingapp.results=résultats
-labtrackingapp.requested=demandé
+labtrackingapp.purge=Retirer
+labtrackingapp.replacePDF=Remplacer PDF
+labtrackingapp.addPDF=Ajouter PDF
+labtrackingapp.removePDF=Retirer PDF
+labtrackingapp.downloadPDF=Telecharger PDF
+labtrackingapp.pathology=Pathologie
+labtrackingapp.noResults=Pas de resultat
+labtrackingapp.notTaken=Ne pas prendre
+labtrackingapp.taken=Prendre
+labtrackingapp.results=Resultat
+labtrackingapp.requested=Demandé
 labtrackingapp.procedure=Procédure
 labtrackingapp.procedures=Procédures
-labtrackingapp.accessionNumber=Numéro d'entrée
-labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
+labtrackingapp.accessionNumber=Numéro d'acces
+labtrackingapp.findPatient.search.placeholder=Rechercher patient par identite, nom ou numero d'acces
