UHM-6266, update French translations

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -1,8 +1,8 @@
 labtrackingapp.title=Suivi de la pathologie
 labtrackingapp.addorderpagetitle=Demander un nouveau test
-labtrackingapp.editOrderPageTitle=Edit existing order
+labtrackingapp.editOrderPageTitle=Modifier le test existant
 labtrackingapp.savingtitle=Enregistrer la demande
-labtrackingapp.loadingtitle=Loading Test Order
+labtrackingapp.loadingtitle=Chargement du test
 labtrackingapp.prelabdiagnosislabel=Diagnostic pre-operatoire
 labtrackingapp.proceduresitelabel=Procedure
 labtrackingapp.procedureNonCoded=Procedure non-codee
@@ -26,8 +26,8 @@ labtrackingapp.orderdetails.postopdiagnosislabel=Diagnostic post-operatoire
 labtrackingapp.orderdetails.additionalinformationlabel=Information supplementaires
 labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
 labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
-labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry Needed
-labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry Sent to Boston
+labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochimie nécessaire
+labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochimie envoyée à Boston
 labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
 labtrackingapp.orderdetails.resultsdatelabel=Date de resultat
 labtrackingapp.orderdetails.noteslabel=Remarques
