UHM-6371, tweak autocomplete settings to speed it up

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ labtrackingapp.savingtitle=Saving Test Order
 labtrackingapp.loadingtitle=Loading Test Order
 labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.proceduresitelabel=Procedure
-labtrackingapp.procedureNonCoded = Procedure Non-Coded
+labtrackingapp.procedureNonCoded =Other procedure
 labtrackingapp.caresettinglabel= Care Setting
 labtrackingapp.instructionslabel=Instructions
 labtrackingapp.clinicalhistorylabel=Clinical History
@@ -60,6 +60,7 @@ labtrackingapp.proceduresSelected=Selected
 labtrackingapp.proceduresAvailable=Available
 labtrackingapp.loading=Loading
 labtrackingapp.purge=Purge
+labtrackingapp.noProceduresFound=No Procedures Found
 labtrackingapp.replacePDF=Replace PDF
 labtrackingapp.addPDF=Add PDF
 labtrackingapp.removePDF=Remove PDF
