--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -5,7 +5,7 @@ labtrackingapp.savingtitle=Enregistrer la demande
 labtrackingapp.loadingtitle=Chargement du test
 labtrackingapp.prelabdiagnosislabel=Diagnostic pre-operatoire
 labtrackingapp.proceduresitelabel=Procedure
-labtrackingapp.procedureNonCoded=Procedure non-codee
+labtrackingapp.procedureNonCoded=Autre procédure
 labtrackingapp.caresettinglabel=Parametre de soins
 labtrackingapp.instructionslabel=Instruction
 labtrackingapp.clinicalhistorylabel=Histoire clinique
@@ -61,6 +61,7 @@ labtrackingapp.proceduresAvailable=Disponibles
 labtrackingapp.loading=Chargement en cours...
 labtrackingapp.purge=Retirer
 labtrackingapp.replacePDF=Remplacer PDF
+labtrackingapp.noProceduresFound=Aucune procédure trouvée
 labtrackingapp.addPDF=Ajouter PDF
 labtrackingapp.removePDF=Retirer PDF
 labtrackingapp.downloadPDF=Telecharger PDF
