UHM-6391, add field to capture the date the immunohistochemistry was sent to Boston

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -28,6 +28,7 @@ labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
 labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry Needed
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry Sent to Boston
+labtrackingapp.orderdetails.dateImmunoSentlabel=Date Immunohistochemistry Sent
 labtrackingapp.orderdetails.specimandetailslabel=Specimen details
 labtrackingapp.orderdetails.resultsdatelabel=Results Date
 labtrackingapp.orderdetails.noteslabel=Notes
