--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -28,6 +28,7 @@ labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
 labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochimie nécessaire
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochimie envoyée à Boston
+labtrackingapp.orderdetails.dateImmunoSentlabel=Date d'envoi Immunohistochimie
 labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
 labtrackingapp.orderdetails.resultsdatelabel=Date de resultat
 labtrackingapp.orderdetails.noteslabel=Remarques
