--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -46,7 +46,7 @@ labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
 labtrackingapp.listpage.to=à
 labtrackingapp.listpage.from=de
-labtrackingapp.listpage.enter=enter
+labtrackingapp.listpage.enter=entrer
 labtrackingapp.listpage.search=Rechercher un patient
 labtrackingapp.listpage.ordercancelreasonprompt=Etes-vous sur de vouloir annuler le test?
 labtrackingapp.listpage.orderpurgereasonprompt=Etes-vous sur de vouloir retirer le test?
