UHM-6266, translate status codes

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -38,6 +38,11 @@ labtrackingapp.listpage.pleasewait=Updating, please wait
 labtrackingapp.listpage.patient=Patient ID
 labtrackingapp.listpage.name=Name
 labtrackingapp.listpage.status=Status
+labtrackingapp.listpage.status.all=All
+labtrackingapp.listpage.status.requested=Requested
+labtrackingapp.listpage.status.processed=Processed
+labtrackingapp.listpage.status.reported=Reported
+labtrackingapp.listpage.status.canceled=Canceled
 labtrackingapp.listpage.requestdate=Request Date
 labtrackingapp.listpage.sampledate=Sample Date
 labtrackingapp.listpage.processingDate=Processing Date
