--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -38,6 +38,11 @@ labtrackingapp.listpage.pleasewait=Mise a jour / attendre
 labtrackingapp.listpage.patient=Identification du patient
 labtrackingapp.listpage.name=Nom
 labtrackingapp.listpage.status=Statut
+labtrackingapp.listpage.status.all=Tous
+labtrackingapp.listpage.status.requested=Demandé
+labtrackingapp.listpage.status.processed=Préparé
+labtrackingapp.listpage.status.reported=Signalé
+labtrackingapp.listpage.status.canceled=Annulé
 labtrackingapp.listpage.requestdate=Date de la demande
 labtrackingapp.listpage.sampledate=Date de reception du speciemen
 labtrackingapp.listpage.processingDate=Date de realisation du test
