UHM-6393, search dx live asynchronousily

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,6 +23,8 @@ labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
 labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+labtrackingapp.dx.notfound=No diagnosis found
+labtrackingapp.procedure.notfound=No procedure found
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
 labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
