--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -23,6 +23,8 @@ labtrackingapp.orderdetails.locationlabel=Lieu de realisation de la procedure
 labtrackingapp.orderdetails.attendingsurgeonlabel=En attente de chirurgie
 labtrackingapp.orderdetails.preoathologydiagnosislabel=Diagnostic pre-operatoire
 labtrackingapp.orderdetails.postopdiagnosislabel=Diagnostic post-operatoire
+labtrackingapp.dx.notfound=Pas de diagnostic trouvé
+labtrackingapp.procedure.notfound=Pas de procédure trouvée
 labtrackingapp.orderdetails.additionalinformationlabel=Information supplementaires
 labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
 labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
