UHM-6266 Changed to sentence case for pathology forms

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,40 +1,40 @@
 labtrackingapp.title=Pathology Tracking
 labtrackingapp.addorderpagetitle=Order a new test
 labtrackingapp.editOrderPageTitle=Edit existing order
-labtrackingapp.savingtitle=Saving Test Order
-labtrackingapp.loadingtitle=Loading Test Order
-labtrackingapp.prelabdiagnosislabel=Pre-Op Diagnosis
+labtrackingapp.savingtitle=Saving test Order
+labtrackingapp.loadingtitle=Loading test Order
+labtrackingapp.prelabdiagnosislabel=Pre-Op diagnosis
 labtrackingapp.proceduresitelabel=Procedure
 labtrackingapp.procedureNonCoded =Other procedure
-labtrackingapp.caresettinglabel= Care Setting
+labtrackingapp.caresettinglabel= Care setting
 labtrackingapp.instructionslabel=Instructions
-labtrackingapp.clinicalhistorylabel=Clinical History
-labtrackingapp.pathologyspecimendetailslabel=Specimen Processing Details
+labtrackingapp.clinicalhistorylabel=Clinical history
+labtrackingapp.pathologyspecimendetailslabel=Specimen processing details
 labtrackingapp.resultdetailslabel=Result details
-labtrackingapp.orderdetails.title=Lab Test details
+labtrackingapp.orderdetails.title=Lab test details
 labtrackingapp.orderdetails.label=Order details
 labtrackingapp.orderdetails.residentlabel=Resident
 labtrackingapp.orderdetails.mdtonotifylabel=MD to notify
 labtrackingapp.orderdetails.phoneNumberForClinician=Phone number for clinician
-labtrackingapp.orderdetails.sampledatelabel=Date of Procedure
-labtrackingapp.orderdetails.processedDatelabel=Date Processed
-labtrackingapp.orderdetails.dateOfInitialConsult=Date of Initial Consult
+labtrackingapp.orderdetails.sampledatelabel=Date of procedure
+labtrackingapp.orderdetails.processedDatelabel=Date processed
+labtrackingapp.orderdetails.dateOfInitialConsult=Date of initial consult
 labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
-labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-Op Diagnosis
-labtrackingapp.orderdetails.postopdiagnosislabel=Post-Op Diagnosis
+labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-op diagnosis
+labtrackingapp.orderdetails.postopdiagnosislabel=Post-op diagnosis
 labtrackingapp.dx.notfound=No diagnosis found
 labtrackingapp.procedure.notfound=No procedure found
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
-labtrackingapp.orderdetails.suspectedCancer=Suspected Cancer
-labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry Needed
-labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry Sent to Boston
-labtrackingapp.orderdetails.dateImmunoSentlabel=Date Immunohistochemistry Sent
+labtrackingapp.orderdetails.suspectedCancer=Suspected cancer
+labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry needed
+labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry sent to Boston
+labtrackingapp.orderdetails.dateImmunoSentlabel=Date immunohistochemistry sent
 labtrackingapp.orderdetails.specimandetailslabel=Specimen details
-labtrackingapp.orderdetails.resultsdatelabel=Results Date
+labtrackingapp.orderdetails.resultsdatelabel=Results date
 labtrackingapp.orderdetails.noteslabel=Notes
-labtrackingapp.orderdetails.uploadfilelabel=Results File
+labtrackingapp.orderdetails.uploadfilelabel=Results file
 labtrackingapp.listpage.panelheading=Test Orders
 labtrackingapp.listpage.pleasewait=Updating, please wait
 labtrackingapp.listpage.patient=Patient ID
@@ -45,10 +45,10 @@ labtrackingapp.listpage.status.requested=Requested
 labtrackingapp.listpage.status.processed=Processed
 labtrackingapp.listpage.status.reported=Reported
 labtrackingapp.listpage.status.canceled=Canceled
-labtrackingapp.listpage.requestdate=Request Date
-labtrackingapp.listpage.sampledate=Sample Date
-labtrackingapp.listpage.processingDate=Processing Date
-labtrackingapp.listpage.resultdate=Result Date
+labtrackingapp.listpage.requestdate=Request date
+labtrackingapp.listpage.sampledate=Sample date
+labtrackingapp.listpage.processingDate=Processing date
+labtrackingapp.listpage.resultdate=Result date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Details
 labtrackingapp.listpage.to=to
@@ -58,17 +58,17 @@ labtrackingapp.listpage.search=Search for patient
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Pathology Tracking
-labtrackingapp.labSummary=Pathology Summary
-labtrackingapp.order.label=Order Lab
-labtrackingapp.orderPathology.label=Order Pathology Test
+labtrackingapp.labSummary=Pathology summary
+labtrackingapp.order.label=Order lab
+labtrackingapp.orderPathology.label=Order pathology test
 labtrackingapp.orderNumberLabel=Order #
-labtrackingapp.returnToListPage=Return to List
-labtrackingapp.cancelOrder=Cancel Test Order
+labtrackingapp.returnToListPage=Return to list
+labtrackingapp.cancelOrder=Cancel test order
 labtrackingapp.proceduresSelected=Selected
 labtrackingapp.proceduresAvailable=Available
 labtrackingapp.loading=Loading
 labtrackingapp.purge=Purge
-labtrackingapp.noProceduresFound=No Procedures Found
+labtrackingapp.noProceduresFound=No procedures found
 labtrackingapp.replacePDF=Replace PDF
 labtrackingapp.addPDF=Add PDF
 labtrackingapp.removePDF=Remove PDF
@@ -81,5 +81,5 @@ labtrackingapp.results=results
 labtrackingapp.requested=requested
 labtrackingapp.procedure=Procedure
 labtrackingapp.procedures=Procedures
-labtrackingapp.accessionNumber=Accession Number
-labtrackingapp.findPatient.search.placeholder=Search by ID, Name, or Accession Number
+labtrackingapp.accessionNumber=Accession number
+labtrackingapp.findPatient.search.placeholder=Search by ID, name, or accession Number
