--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -30,7 +30,7 @@ labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
 labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochimie nécessaire
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochimie envoyée à Boston
-labtrackingapp.orderdetails.dateImmunoSentlabel=Date d'envoi Immunohistochimie
+labtrackingapp.orderdetails.dateImmunoSentlabel=Date d'envoi immunohistochimie
 labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
 labtrackingapp.orderdetails.resultsdatelabel=Date de resultat
 labtrackingapp.orderdetails.noteslabel=Remarques
@@ -82,4 +82,4 @@ labtrackingapp.requested=Demandé
 labtrackingapp.procedure=Procédure
 labtrackingapp.procedures=Procédures
 labtrackingapp.accessionNumber=Numéro d'acces
-labtrackingapp.findPatient.search.placeholder=Rechercher patient par identite, nom ou numero d'acces
+labtrackingapp.findPatient.search.placeholder=Rechercher patient par identite, nom, ou numero d'acces
