UHM-6266, update French translations

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -52,9 +52,12 @@ labtrackingapp.listpage.resultdate=Result date
 labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Details
 labtrackingapp.listpage.to=to
+labtrackingapp.listpage.of=of
 labtrackingapp.listpage.from=from
 labtrackingapp.listpage.enter=enter
 labtrackingapp.listpage.search=Search for patient
+labtrackingapp.listpage.showing=Showing
+labtrackingapp.listpage.entries=entries
 labtrackingapp.listpage.ordercancelreasonprompt=Are you sure that that you want to cancel this Test Order?
 labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want to purge this Test Order?
 labtrackingapp.app.label=Pathology Tracking
