--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -53,8 +53,11 @@ labtrackingapp.listpage.actions=Actions
 labtrackingapp.listpage.details=Detailles
 labtrackingapp.listpage.to=à
 labtrackingapp.listpage.from=de
+labtrackingapp.listpage.of=de
 labtrackingapp.listpage.enter=entrer
 labtrackingapp.listpage.search=Rechercher un patient
+labtrackingapp.listpage.showing=Affichant
+labtrackingapp.listpage.entries=entrées
 labtrackingapp.listpage.ordercancelreasonprompt=Etes-vous sur de vouloir annuler le test?
 labtrackingapp.listpage.orderpurgereasonprompt=Etes-vous sur de vouloir retirer le test?
 labtrackingapp.app.label=Pathologie - Suivi
