UHM-6451, add confirmed cancer diagnosis

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,11 +23,13 @@ labtrackingapp.orderdetails.locationlabel=Location where procedure performed
 labtrackingapp.orderdetails.attendingsurgeonlabel=Attending surgeon
 labtrackingapp.orderdetails.preoathologydiagnosislabel=Pre-op diagnosis
 labtrackingapp.orderdetails.postopdiagnosislabel=Post-op diagnosis
+labtrackingapp.orderdetails.diagnosislabel=Diagnosis
 labtrackingapp.dx.notfound=No diagnosis found
 labtrackingapp.procedure.notfound=No procedure found
 labtrackingapp.orderdetails.additionalinformationlabel=Additional information
 labtrackingapp.orderdetails.urgentreviewlabel=Urgent review
 labtrackingapp.orderdetails.suspectedCancer=Suspected cancer
+labtrackingapp.orderdetails.confirmedCancer=Confirmed cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry needed
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry sent to Boston
 labtrackingapp.orderdetails.dateImmunoSentlabel=Date immunohistochemistry sent
