UHM-6459, add specimen sent to PaP question

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -33,6 +33,9 @@ labtrackingapp.orderdetails.confirmedCancer=Confirmed cancer
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochemistry needed
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochemistry sent to Boston
 labtrackingapp.orderdetails.dateImmunoSentlabel=Date immunohistochemistry sent
+labtrackingapp.orderdetails.specimenSentToPaP=Specimen sent to Port-au-Prince
+labtrackingapp.orderdetails.dateSentlabel=Sent
+labtrackingapp.orderdetails.dateReturnedlabel=Returned
 labtrackingapp.orderdetails.specimandetailslabel=Specimen details
 labtrackingapp.orderdetails.resultsdatelabel=Results date
 labtrackingapp.orderdetails.noteslabel=Notes
