--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -33,6 +33,9 @@ labtrackingapp.orderdetails.confirmedCancer=Cancer confirmé
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochimie nécessaire
 labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochimie envoyée à Boston
 labtrackingapp.orderdetails.dateImmunoSentlabel=Date d'envoi immunohistochimie
+labtrackingapp.orderdetails.specimenSentToPaP=Spécimen envoyé à Port-au-Prince
+labtrackingapp.orderdetails.dateSentlabel=Envoyé
+labtrackingapp.orderdetails.dateReturnedlabel=Rentré
 labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
 labtrackingapp.orderdetails.resultsdatelabel=Date de resultat
 labtrackingapp.orderdetails.noteslabel=Remarques
