UHM-7469, update message keys

--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -31,9 +31,9 @@ labtrackingapp.orderdetails.urgentreviewlabel=Revision en urgence
 labtrackingapp.orderdetails.suspectedCancer=Suspicion de cancer
 labtrackingapp.orderdetails.confirmedCancer=Cancer confirmé
 labtrackingapp.orderdetails.immunohistochemistryNeeded=Immunohistochimie nécessaire
-labtrackingapp.orderdetails.immunohistochemistrySentToBoston=Immunohistochimie envoyée à Boston
+labtrackingapp.orderdetails.immunohistochemistrySent=Immunohistochimie envoyée à Boston
 labtrackingapp.orderdetails.dateImmunoSentlabel=Date d'envoi immunohistochimie
-labtrackingapp.orderdetails.specimenSentToPaP=Spécimen envoyé à Port-au-Prince
+labtrackingapp.orderdetails.specimenSent=Spécimen envoyé à Port-au-Prince
 labtrackingapp.orderdetails.dateSentlabel=Envoyé
 labtrackingapp.orderdetails.dateReturnedlabel=Rentré
 labtrackingapp.orderdetails.specimandetailslabel=Information sur le specimen
