UHM-8190 Updated pathology button name (casing)

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -68,7 +68,7 @@ labtrackingapp.listpage.orderpurgereasonprompt=Are you sure that that you want t
 labtrackingapp.app.label=Pathology Tracking
 labtrackingapp.labSummary=Pathology summary
 labtrackingapp.order.label=Order lab
-labtrackingapp.orderPathology.label=Order pathology test
+labtrackingapp.orderPathology.label=Order Pathology Test
 labtrackingapp.orderNumberLabel=Order #
 labtrackingapp.returnToListPage=Return to list
 labtrackingapp.cancelOrder=Cancel test order
