--- a/api/src/main/resources/messages_fr.properties
+++ b/api/src/main/resources/messages_fr.properties
@@ -68,7 +68,7 @@ labtrackingapp.listpage.orderpurgereasonprompt=Etes-vous sur de vouloir retirer 
 labtrackingapp.app.label=Pathologie - Suivi
 labtrackingapp.labSummary=Pathologie - Resume
 labtrackingapp.order.label=Demander un test
-labtrackingapp.orderPathology.label=Ordre de pathologie
+labtrackingapp.orderPathology.label=Ordre de Pathologie
 labtrackingapp.orderNumberLabel=Numero de demande
 labtrackingapp.returnToListPage=Retour a la page de liste
 labtrackingapp.cancelOrder=Annuler un test demande
